# lerato

./: AGENTS.md
lerato/: .gitignore  DOCUMENTATION.md  PROJECT_PLAN.md  README.md  RUN_TEST_PLAN.md  pyproject.toml
lerato/editors/vscode/lerato-syntax/: README.md  language-configuration.json  package-extension.ps1  package.json
lerato/editors/vscode/lerato-syntax/syntaxes/: lerato.tmLanguage.json
lerato/examples/: arithmetic.ler  full_language_demo.ler  function_add.ler  hello.ler  if_check.ler  import_demo.ler  import_helper.ler  input_demo.ler  nested_check.ler  variables.ler  while_else_demo.ler
lerato/src/lerato/: __init__.py  ast_nodes.py  cli.py  errors.py  lexer.py  parser.py  runtime.py  transpiler.py
lerato/src/lerato.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
lerato/tests/: test_basic.py  test_lexer.py  test_parser.py  test_runtime.py  test_transpiler.py
