[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lerato"
version = "0.1.0"
description = "A beginner-friendly Sepedi-inspired programming language prototype."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Lerato Contributors" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
lerato = "lerato.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
